--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -37,9 +37,10 @@ jobs:
   notify:
     needs: [pack-and-publish]
     runs-on: ubuntu-latest
-    if: ${{ !contains(github.event.release.tag_name, '-alpha.') }}
     steps:
-      - uses: neolution-ch/action-release-notifier@v1
+      - uses: neolution-ch/action-release-notifier@v1.3.0
         with:
           slack-token: ${{ secrets.SLACK_RELEASE_NOTIFIER_TOKEN }}
           slack-channel-ids: ${{ vars.SLACK_CHANNEL_ID_RELEASE_ANNOUNCEMENTS }}
+          ignore-alpha-releases: true
+          ignore-rc-releases: true
